css/main.css
html {
	box-sizing: border-box;
}

*,
*::before,
*::after {
	box-sizing: inherit;
}

@font-face {
	font-family: Futura;
	src: url("../fonts/Futura.ttf");
}

.site-container {
	max-width: 1200px;
	margin: auto;
}

body {
	font-family: 'Lato', sans-serif;
	background-image: url("../img/parchment.png");
	background-attachment: fixed;
}

h1 {
	font-family: Futura;
	font-size: 40px;
	color: #004a80;
	text-shadow: 1px 1px 1px #636363;
}

h2 {
	font-family: Futura;
	font-size: 30px;
	color: #d62722;
}

p {
	line-height: 23px;
}

a {
	text-decoration: none;
}

/* WRAPPER */

#wrapper {
	width: 100%;
	margin: auto;
}

@media (min-width: 300px) {
	#wrapper {
		background-image: none;
	}
}

@media (min-width: 800px) {
	#wrapper {
		background-image: url("../img/eiffel_tower.png");
		background-repeat: no-repeat;
		background-position: bottom right;
	}
}

/* HEADER */

header {
	margin: 0 auto;
}

/* LOGO */

#logo {
	max-width: 400px;
	margin: auto;
}

#logo img {
	width: 100%;
	margin: 20px 0;
}

@media (min-width: 300px) {
	#logo {
		width: 50%;
	}
}

@media (min-width: 600px) {
	#logo img {
		width: 80%;
	}
}

@media (min-width: 900px) {
	#logo img {
		width: 100%;
	}
}

/* NAVIGATION */

nav {
	width: 100%;
	margin: auto;
	background-color: #004a80;
	margin-bottom: 60px;
	text-align: center;
}

nav ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

nav a {
	display: block;
	line-height: 50px;
	text-decoration: none;
	text-align: center;
	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
	text-transform: uppercase;
	font-family: Futura;
	color: #ffffff;
	border: none;
}

nav a:hover {
	text-decoration: none;
	color: #dabd88;
}

@media (min-width: 600px) {
	nav li {
		width: 20%;
		display: inline-block;
	}
}

@media (min-width: 1200px) {
	nav li {
		width: calc(100% / 4);
	}
}

.title {
	width: auto;
	height: auto;
	margin: auto;
	padding: 10px;
	background-color: #818181;
	text-align: center;
	-webkit-border-radius: 10px 10px 10px 10px;
	border-radius: 10px 10px 10px 10px;
	color: #ffffff;
	font-weight: normal;
	font-size: 25px;
	font-family: 'Lato', sans-serif;
}

/* TYPE STYLES */

@media (min-width: 300px) {
	#type-styles {
		text-align: center;
		width: 85%;
	}
	#type-styles  h1 {
		font-size: 30px;
	}
	#type-styles  h2 {
		font-size: 25px;
	}
	#type-styles  p {
		font-size: 15px;
	}
}

@media (min-width: 600px) {
	#type-styles {
		text-align: left;
		width: 100%;
	}
	#type-styles  h1 {
		font-size: 40px;
	}
	#type-styles  h2 {
		font-size: 35px;
	}
	#type-styles  p {
		font-size: 17px;
	}
}

@media (min-width: 1200px) {
	#type-styles {
		float: left;
	}
}

/* CLICKABLES */

.container {
	max-width: 550px;
	margin: auto;
	margin-bottom: 30px;
	background-color: #ffffff;
	padding: 12px;
	-webkit-border-radius: 12px 12px 12px 12px;
	border-radius: 12px 12px 12px 12px;
	-webkit-box-shadow: 2px 3px 4px 2px #a6a6a6;
	box-shadow: 2px 3px 4px 2px #a6a6a6;
}

#click,
#submit {
	display: block;
	width: 100px;
	margin: 20px 0;
	padding: 10px;
	color: #ffffff;
	background-color: #004a80;
	text-align: center;
	text-decoration: none;
	-webkit-box-shadow: 1px 1px 1px 1px #a6a6a6;
	box-shadow: 1px 1px 1px 1px #a6a6a6;
	-webkit-border-radius: 5px 5px 5px 5px;
	border-radius: 5px 5px 5px 5px;
}

#click:hover,
#submit:hover {
	background-color: #a61f1b;
}

#click a:visited,
#submit a:visited {
	color: #ffffff;
}

#links {
	color: #35a6f8;
}

#links a:hover {
	font-style: italic;
}

#links a:visited {
	color: #35a6f8;
}

@media (min-width: 300px) {
	#clickables {
		text-align: center;
		width: 85%;
	}
}

@media (min-width: 1200px) {
	#clickables {
		float: right;
	}
}

@media (min-width: 300px) {
	#buttons {
		margin-top: 20px;
	}
	#click,
	#submit {
		margin: 0 auto;
		margin-bottom: 7px;
	}
}

@media (min-width: 600px) {
	#click,
	#submit {
		float: left;
	}
	#submit {
		margin-left: 20px;
	}
	#links {
		margin-top: 30px;
	}
}

/* COLORS */

#blocks {
	padding-top: 20px;
}

#blocks img {
	max-width: 200px;
}

@media (min-width: 300px) {
	#colors {
		margin: auto;
		width: 85%;
	}
	#blocks {
		margin: auto;
	}
	#blocks img {
		width: 32.25%;
	}
}

@media (min-width: 1200px) {
	#colors {
		float: right;
	}
}

/* PHOTOS */

#photos {
	max-width: 900px;
	margin: auto;
	margin-top: 30px;
	background-color: #ffffff;
	padding: 12px;
	-webkit-border-radius: 12px 12px 12px 12px;
	border-radius: 12px 12px 12px 12px;
	-webkit-box-shadow: 2px 3px 4px 2px #a6a6a6;
	box-shadow: 2px 3px 4px 2px #a6a6a6;
	clear: both;
}

#images {
	padding-top: 20px;
	max-width: 668px;
	margin: auto;
}

#images img {
	max-width: 200px;
	margin: 10px;
}

@media (min-width: 300px) {
	#photos {
		width: 85%;
	}
	#images {
		margin: auto;
		text-align: center;
	}
}

@media (min-width: 600px) {
	#images img {
		width: 26%;
	}
}

@media (min-width: 1200px) {
	#photos {
		width: 100%;
	}
	#images {
		width: 100%;
	}
	#images img {
		width: auto;
	}
}

/* FOOTER */

footer {
	margin: 0 auto;
	margin-top: 50px;
	padding: 10px 0;
	font-family: 'Lato', sans-serif;
	background-color: #004a80;
	clear: both;
}

footer p {
	font-size: 14px;
	text-align: center;
	color: #ffffff;
}

